fixed recipe icon display on mobile

--- a/src/sass/pages/_recipe.scss
+++ b/src/sass/pages/_recipe.scss
@@ -61,6 +61,7 @@
     margin-left: -0.2rem;
 
     &__icon {
+      flex-shrink: 0;
       display: flex;
       justify-content: center;
       align-items: center;
